--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="search-container">
-        <input type="text" id="search-input" placeholder="Enter a name">
-        <button onclick="searchPerson()">Search</button>
+        <input type="text" id="search-input" placeholder="Digite para pesquisar">
+        <button onclick="searchPerson()">Pesquisar</button>
     </div>
     <div id="result" class="hidden">
         <h2>Person Details</h2>
