--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <h1 style="text-align: left; padding-left: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lista de Ramais</h1>
+    </div>
     <div class="search-container">
-        <input type="text" id="search-input" placeholder="Digite para pesquisar">
+        <input type="text" id="search-input" placeholder="Digite o Nome">
         <button onclick="searchPerson()">Pesquisar</button>
     </div>
     <div id="result" class="hidden">
